--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://aavrcworld.github.io/aavrc/",
+  "homepage": "https://aavrc.com/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
